--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="dist/css/bootstrap-grid.min.css"/>
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/canvasjs@1.8.3/dist/canvasjs.min.js"></script> -->
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
